# airfoil-calculator-and-generator-

./: .gitignore  README.md  api.py  bundle_app.py  launch.bat  pyproject.toml  run_app.py
airfoil generator/: package.json  pnpm-lock.yaml
airfoil generator/app/: layout.tsx  page.tsx
airfoil generator/components/: airfoil-3d.tsx  airfoil-sidebar.tsx  airfoil-svg.tsx
airfoil_config/: __init__.py  airfoil_selector.py  cq_airfoil.py  generator.py  geometry_data.py  lifting_line.py  loft.py  naca_geometry.py  polar_db.py  powertrain.py  report_generator.py  requirements.py  scoring.py  thin_airfoil.py  weight_engine.py  wing_planform.py  xfoil_runner.py
frontend/components/: airfoil-3d.tsx
templates/: index.html
tests/: test_airfoil_selector.py  test_api.py  test_cq_airfoil.py  test_lifting_line.py  test_loft.py  test_naca_geometry.py  test_polar_db.py  test_report_generator.py  test_requirements.py  test_scoring.py  test_thin_airfoil.py  test_wing_planform.py  test_xfoil_runner.py
